<resources>
    <string name="app_name">gr27 - SnapTrash</string>
    <string name="title_activity_maps">Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="username_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="sign_up_text">Not a member? Sign up now.</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="menu_profile_title">Profile</string>
    <string name="menu_store_title">Store</string>
    <string name="menu_routes_title">Routes</string>
    <string name="menu_sign_out_title">Sign Out</string>
    <string name="menu_social_title">Social</string>
    <string name="menu_settings_title">Settings</string>
    <string name="username_placeholder_text">Username</string>
    <string name="menu_help_title"><![CDATA[Help & feedback]]></string>
    <string name="SessionExpired">Session expired: please login again.</string>
    <string name="PickUpTrash">Pick up</string>
    <string name="SnappedBy">Snapped by: %s</string>
    <string name="StartRecording">Start Recording</string>
    <string name="TrashPickUpVerified">Trash Pickup Verified</string>
    <string name="FailedPickUp">Failed pickup</string>
    <string name="RouteAlreadyInProgress">Route already in progress</string>
    <string name="FailedConnectingToServer">Failed connecting to server.</string>
    <string name="connectionFailed">Failed connecting to server.</string>
    <string name="alreadyMemberText">Already a member? Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="create_account_text">Create Account</string>
    <string name="hint_password">Password</string>
    <string name="menu_credits_title">Credits</string>

</resources>
