<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.snaptrash.snaptrash.BlankFragment"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/LogoView"
        android:layout_width="270dp"
        android:layout_height="121dp"
        android:src="@mipmap/ic_launcher"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="35dp" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="239dp"
        android:layout_height="55dp"
        android:text="@string/sign_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="332dp" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username_placeholder"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="192dp" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="265dp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="409dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/forgot_password_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
