<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.snaptrash.snaptrash.LogInFragment">


    <ImageView
        android:id="@+id/logo"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="280dp"
        android:layout_height="120dp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <EditText
        android:id="@+id/userName"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username_placeholder"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintTop_toBottomOf="@+id/logo"
    />

    <EditText
        android:id="@+id/password"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_placeholder"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logIn"
        app:layout_constraintTop_toBottomOf="@id/userName"
    />

    <Button
        android:id="@+id/logIn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
    />

    <dk.snaptrash.snaptrash.UnderlineTextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logIn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/sign_up_text"
    />

    <dk.snaptrash.snaptrash.UnderlineTextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    />

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintStart_toEndOf="@id/logIn"
        app:layout_constraintTop_toTopOf="@id/logIn"
        app:layout_constraintBottom_toBottomOf="@id/logIn" />


</android.support.constraint.ConstraintLayout>
